--- a/index.html
+++ b/index.html
@@ -1,116 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>USYD Timetable Planner</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: white;
-      color: #111;
-    }
+<meta charset="UTF-8" />
+<title>USYD Timetable Planner</title>
 
-    header {
-      padding: 20px;
-      text-align: center;
-      border-bottom: 1px solid #e5e5e5;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: white;
+  color: #111;
+}
 
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
+header {
+  padding: 20px;
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
 
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin: 15px 0;
-    }
+.controls {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  margin: 15px;
+}
 
-    button {
-      padding: 8px 14px;
-      border: 1px solid #ccc;
-      background: #f9f9f9;
-      cursor: pointer;
-      border-radius: 6px;
-    }
+button {
+  padding: 8px 14px;
+  border: 1px solid #ccc;
+  background: #f9f9f9;
+  border-radius: 6px;
+  cursor: pointer;
+}
 
-    button:hover {
-      background: #eee;
-    }
+button:hover {
+  background: #eee;
+}
 
-    .timetable-wrapper {
-      overflow-x: auto;
-      padding: 10px;
-    }
+.legend {
+  max-width: 900px;
+  margin: 0 auto 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  font-size: 14px;
+}
 
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      min-width: 900px;
-    }
+.legend-item {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
 
-    th, td {
-      border: 1px solid #ddd;
-      text-align: center;
-      padding: 6px;
-      height: 32px;
-      cursor: pointer;
-    }
+.legend-color {
+  width: 16px;
+  height: 16px;
+  border-radius: 4px;
+}
 
-    th {
-      background: #f5f5f5;
-      font-weight: bold;
-      cursor: default;
-    }
+.timetable-wrapper {
+  overflow-x: auto;
+  padding: 10px;
+}
 
-    td.time {
-      background: #fafafa;
-      font-weight: bold;
-      cursor: default;
-      width: 80px;
-    }
+table {
+  border-collapse: collapse;
+  width: 100%;
+  min-width: 850px;
+}
 
-    .login {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.4);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+th, td {
+  border: 1px solid #ddd;
+  text-align: center;
+  padding: 6px;
+  height: 32px;
+}
 
-    .login-box {
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      width: 280px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      text-align: center;
-    }
+th {
+  background: #f5f5f5;
+}
 
-    .login-box input {
-      width: 100%;
-      padding: 8px;
-      margin: 10px 0;
-    }
+td.time {
+  background: #fafafa;
+  font-weight: bold;
+  width: 80px;
+}
 
-    .hidden {
-      display: none;
-    }
-  </style>
+.login {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-box {
+  background: white;
+  padding: 25px;
+  border-radius: 10px;
+  width: 280px;
+  text-align: center;
+}
+
+.hidden { display: none; }
+
+@media (max-width: 600px) {
+  th, td { font-size: 12px; padding: 4px; }
+}
+</style>
 </head>
+
 <body>
 
 <div id="loginScreen" class="login">
   <div class="login-box">
     <h2>Login</h2>
-    <p>Enter a username to save your timetable</p>
     <input id="usernameInput" placeholder="Username" />
     <button onclick="login()">Login</button>
   </div>
@@ -121,125 +128,134 @@
 </header>
 
 <div class="controls">
-  <button onclick="changeWeek(-1)">← Previous Week</button>
+  <button onclick="changeWeek(-1)">← Previous</button>
   <span id="weekLabel">Week 1</span>
-  <button onclick="changeWeek(1)">Next Week →</button>
+  <button onclick="changeWeek(1)">Next →</button>
+  <button onclick="copyWeek()">Copy Previous Week</button>
 </div>
+
+<div class="legend" id="legend"></div>
 
 <div class="timetable-wrapper">
   <table id="timetable"></table>
 </div>
 
 <script>
-  const days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'];
-  const startHour = 8;
-  const endHour = 20;
-  const interval = 30;
+const days = ['Monday','Tuesday','Wednesday','Thursday','Friday'];
+const startHour = 8, endHour = 20, interval = 30;
+const palette = ['#dbeafe','#ede9fe','#dcfce7','#cffafe','#fce7f3','#fef9c3'];
 
-  let currentWeek = 1;
-  let user = null;
+let currentWeek = 1;
+let user = null;
 
-  // ===== SUBJECT COLOR SYSTEM =====
-  function getSubjectColors() {
-    return JSON.parse(localStorage.getItem(`${user}-subjectColors`) || '{}');
+function getColors() {
+  return JSON.parse(localStorage.getItem(user+'-colors') || '{}');
+}
+function saveColors(c){ localStorage.setItem(user+'-colors',JSON.stringify(c)); }
+
+function colorFor(subject) {
+  const colors = getColors();
+  if (!colors[subject]) {
+    colors[subject] = palette[Object.keys(colors).length % palette.length];
+    saveColors(colors);
   }
+  return colors[subject];
+}
 
-  function saveSubjectColors(colors) {
-    localStorage.setItem(`${user}-subjectColors`, JSON.stringify(colors));
+function updateLegend() {
+  const legend = document.getElementById('legend');
+  legend.innerHTML = '';
+  const colors = getColors();
+  Object.keys(colors).forEach(s => {
+    const item = document.createElement('div');
+    item.className = 'legend-item';
+    item.innerHTML = `<div class="legend-color" style="background:${colors[s]}"></div>${s}`;
+    legend.appendChild(item);
+  });
+}
+
+function buildTable() {
+  const table = document.getElementById('timetable');
+  table.innerHTML = '';
+  updateLegend();
+
+  const head = document.createElement('tr');
+  head.appendChild(document.createElement('th'));
+  days.forEach(d => { const th=document.createElement('th'); th.textContent=d; head.appendChild(th); });
+  table.appendChild(head);
+
+  for (let h=startHour; h<endHour; h++) {
+    for (let m=0; m<60; m+=interval) {
+      const row = document.createElement('tr');
+      const time = document.createElement('td');
+      time.className='time';
+      time.textContent=`${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}`;
+      row.appendChild(time);
+
+      days.forEach(day=>{
+        const cell=document.createElement('td');
+        const key=`${user}-w${currentWeek}-${day}-${h}-${m}`;
+        const val=localStorage.getItem(key);
+        if(val){ cell.textContent=val; cell.style.background=colorFor(val); }
+        cell.onclick=()=>edit(cell,key);
+        cell.oncontextmenu=e=>{ e.preventDefault(); clear(cell,key); };
+        row.appendChild(cell);
+      });
+      table.appendChild(row);
+    }
   }
+}
 
-  function getColorForSubject(subject) {
-    const colors = getSubjectColors();
-    if (colors[subject]) return colors[subject];
+function edit(cell,key){
+  const v=prompt('Subject:',cell.textContent);
+  if(v===null) return;
+  if(!v.trim()) return clear(cell,key);
+  cell.textContent=v;
+  cell.style.background=colorFor(v);
+  localStorage.setItem(key,v);
+  updateLegend();
+}
 
-    const hue = Math.floor(Math.random() * 360);
-    const color = `hsl(${hue}, 70%, 85%)`;
-    colors[subject] = color;
-    saveSubjectColors(colors);
-    return color;
-  }
+function clear(cell,key){
+  cell.textContent='';
+  cell.style.background='';
+  localStorage.removeItem(key);
+}
 
-  function buildTable() {
-    const table = document.getElementById('timetable');
-    table.innerHTML = '';
-
-    const headerRow = document.createElement('tr');
-    headerRow.appendChild(document.createElement('th'));
-
-    days.forEach(day => {
-      const th = document.createElement('th');
-      th.textContent = day;
-      headerRow.appendChild(th);
-    });
-
-    table.appendChild(headerRow);
-
-    for (let h = startHour; h < endHour; h++) {
-      for (let m = 0; m < 60; m += interval) {
-        const row = document.createElement('tr');
-
-        const timeCell = document.createElement('td');
-        timeCell.className = 'time';
-        timeCell.textContent = `${String(h).padStart(2, '0')}:${String(m).padStart(2, '0')}`;
-        row.appendChild(timeCell);
-
-        days.forEach(day => {
-          const cell = document.createElement('td');
-          const key = `${user}-week${currentWeek}-${day}-${h}-${m}`;
-          const saved = localStorage.getItem(key);
-
-          if (saved) {
-            cell.textContent = saved;
-            cell.style.backgroundColor = getColorForSubject(saved);
-          }
-
-          cell.onclick = () => editCell(cell, key);
-          row.appendChild(cell);
-        });
-
-        table.appendChild(row);
+function copyWeek(){
+  if(currentWeek===1) return;
+  days.forEach(day=>{
+    for(let h=startHour;h<endHour;h++){
+      for(let m=0;m<60;m+=interval){
+        const prev=`${user}-w${currentWeek-1}-${day}-${h}-${m}`;
+        const curr=`${user}-w${currentWeek}-${day}-${h}-${m}`;
+        const val=localStorage.getItem(prev);
+        if(val) localStorage.setItem(curr,val);
       }
     }
-  }
+  });
+  buildTable();
+}
 
-  function editCell(cell, key) {
-    const value = prompt('Enter subject name:', cell.textContent);
-    if (value === null) return;
+function changeWeek(d){
+  currentWeek=Math.max(1,currentWeek+d);
+  document.getElementById('weekLabel').textContent='Week '+currentWeek;
+  buildTable();
+}
 
-    if (value.trim() === '') {
-      cell.textContent = '';
-      cell.style.backgroundColor = '';
-      localStorage.removeItem(key);
-    } else {
-      cell.textContent = value;
-      cell.style.backgroundColor = getColorForSubject(value);
-      localStorage.setItem(key, value);
-    }
-  }
+function login(){
+  const u=document.getElementById('usernameInput').value.trim();
+  if(!u) return;
+  user=u;
+  localStorage.setItem('usydUser',u);
+  document.getElementById('loginScreen').classList.add('hidden');
+  buildTable();
+}
 
-  function changeWeek(delta) {
-    currentWeek = Math.max(1, currentWeek + delta);
-    document.getElementById('weekLabel').textContent = `Week ${currentWeek}`;
-    buildTable();
-  }
-
-  function login() {
-    const input = document.getElementById('usernameInput');
-    if (!input.value.trim()) return;
-    user = input.value.trim();
-    localStorage.setItem('usydUser', user);
-    document.getElementById('loginScreen').classList.add('hidden');
-    buildTable();
-  }
-
-  window.onload = () => {
-    const savedUser = localStorage.getItem('usydUser');
-    if (savedUser) {
-      user = savedUser;
-      document.getElementById('loginScreen').classList.add('hidden');
-      buildTable();
-    }
-  };
+window.onload=()=>{
+  const u=localStorage.getItem('usydUser');
+  if(u){ user=u; document.getElementById('loginScreen').classList.add('hidden'); buildTable(); }
+};
 </script>
 
 </body>
